<resources>
    <string name="app_name">SimpleAdder</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="session_code">Session code</string>
    <string name="condition_code">Condition code</string>
    <string name="participant_code">Participant code</string>
    <string name="ok">Ok</string>
    <string name="exit">Exit</string>
    <string name="results">Results</string>
    <string name="trial_1">Trial 1</string>
    <string name="trial_2">Trial 2</string>
    <string name="trial_3">Trial 3</string>
    <string name="trial_4">Trial 4</string>
    <string name="trial_5">Trial 5</string>
    <string name="trial_number">Trial Number</string>
    <string name="input_1">Input 1</string>
    <string name="input_2">Input 2</string>
    <string name="time">Time</string>
    <string name="number_of_ticks">Number of ticks</string>
    <string name="ticks">Ticks</string>
    <string name="trial">Trial</string>
    <string name="participant">Participant</string>
    <string name="session">Session</string>
    <string name="condition">Condition</string>
</resources>
