<?xml version="1.0" encoding="utf-8"?>

<!-- not using this yet -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff123456"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#ff234567"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!-- Title and Subtitle -->

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:id="@+id/setupTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/results"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <!-- Use the following TableRow as the template for SPINNER setup items -->

                <TableRow>
                    <TextView
                        android:text="@string/trial"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:text="@string/input_1"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:text="@string/input_2"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:text="@string/time"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/trial_1"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/t1Input1Text"
                        android:text=""
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/t1Input2Text"
                        android:text=""
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/t1TimeText"
                        android:text=""
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/ticks"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/t1Ticks1Text"
                        android:text=""
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/t1Ticks2Text"
                        android:text=""
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <!-- Use the following TableRow as the template for EDITTEXT setup items -->
                <TableRow>
                    <TextView
                        android:text="@string/trial_2"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/t2Input1Text"
                        android:text=""
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/t2Input2Text"
                        android:text=""
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/t2TimeText"
                        android:text=""
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/t2TicksText"
                        android:text=""
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/ticks"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/t2Ticks1Text"
                        android:text=""
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/t2Ticks2Text"
                        android:text=""
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/trial_3"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/t3Input1Text"
                        android:text=""
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/t3Input2Text"
                        android:text=""
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/t3TimeText"
                        android:text=""
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/t3TicksText"
                        android:text=""
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/ticks"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/t3Ticks1Text"
                        android:text=""
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/t3Ticks2Text"
                        android:text=""
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/trial_4"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/t4Input1Text"
                        android:text=""
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/t4Input2Text"
                        android:text=""
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/t4TimeText"
                        android:text=""
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/t4TicksText"
                        android:text=""
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/ticks"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/t4Ticks1Text"
                        android:text=""
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/t4Ticks2Text"
                        android:text=""
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/trial_5"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/t5Input1Text"
                        android:text=""
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/t5Input2Text"
                        android:text=""
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/t5TimeText"
                        android:text=""
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/t5TicksText"
                        android:text=""
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/ticks"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/t5Ticks1Text"
                        android:text=""
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/t5Ticks2Text"
                        android:text=""
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/participant"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/participantCodeText"
                        android:text=""
                        android:padding="5dp"
                        android:gravity="right"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/session"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/sessionCodeText"
                        android:text=""
                        android:padding="5dp"
                        android:gravity="right"

                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/condition"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:id="@+id/conditionCodeText"
                        android:text=""
                        android:padding="5dp"
                        android:gravity="right"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

            </TableLayout>

        </LinearLayout>

        <!-- OK, SAVE, and EXIT Buttons -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/setup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="Setup"
                android:textAppearance="?android:attr/textAppearanceMedium">
            </Button>

            <Button
                android:id="@+id/exit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/exit"
                android:textAppearance="?android:attr/textAppearanceMedium">
            </Button>
        </LinearLayout>

        <!-- BEGIN customizable part of setup -->

    </LinearLayout>
</ScrollView>